<resources>
    <string name="app_name">OnlineGymApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer_main">DrawerMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_machines">Machines</string>
    <string name="menu_session">Session</string>
    <string name="menu_trainers">Trainers</string>
    <string name="menu_upcomingevents">Upcoming Events</string>
    <string name="menu_gymprofile">Profile</string>
</resources>